<resources>
    <string name="app_name">Konselink-Counselor</string>
    <string name="placeholder_login_page">Mari, bantu permasalahan para mahasiswa Universitas Indonesia</string>
    <string name="verification_in_progress">Registrasi telah selesai dilakukan. Mohon menunggu proses verifikasi</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_request">Request</string>
    <string name="logout">Logout</string>
    <string name="menu_schedule">Jadwal</string>
    <string name="menu_profile">Profil</string>
    <string name="full_name">Nama lengkap</string>
    <string name="next">Berikutnya</string>
    <string name="nickname">Nama panggilan</string>
    <string name="chat">Chat</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="gender">Jenis kelamin</string>
    <string name="birth_place">Tempat lahir</string>
    <string name="dd">dd</string>
    <string name="mm">MM</string>
    <string name="yyyy">yyyy</string>
    <string name="birth_date">Tanggal lahir</string>
    <string name="client_registration_form">Form Registrasi</string>
    <string name="religion">Agama</string>
    <string name="address_or_domicile">Alamat / domisili</string>
    <string name="phone_number">No HP</string>
    <string name="specialization">Spesialisasi / Peminatan</string>
    <string name="counselor_data">Data Konselor</string>
    <string name="page_1">1/2</string>
    <string name="education_history">Riwayat Pendidikan</string>
    <string name="page_2">2/2</string>
    <string name="address_or_domicile_kindergarten">Data TK</string>
    <string name="address_or_domicile_elementary">Data SD</string>
    <string name="address_or_domicile_junior">Data SMP</string>
    <string name="address_or_domicile_senior">Data SMA</string>
    <string name="address_or_domicile_college">Data Perguruan Tinggi</string>
    <string name="client_education_history">Riwayat Pendidikan</string>
    <string name="education_address_instruction">Apabila lebih dari satu sekolah, satu sekolah diisi dengan format di atas, kemudian tambahkan titik koma (;) di akhir dan isi lagi sesuai format</string>
    <string name="client_family">Data Keluarga</string>
    <string name="education_data_instruction">Format penulisan: Nama sekolah / alamat atau domisili / tahun masuk / tahun lulus. Contoh: SMP 12 / Wijaya IX / 2011 / 2014</string>
    <string name="name">Nama</string>
    <string name="age">Usia</string>
    <string name="tribe">Suku</string>
    <string name="mother_address">Alamat</string>
    <string name="father_data">Data ayah / wali</string>
    <string name="mother_data">Data ibu / wali</string>
    <string name="occupation">Pekerjaan</string>
    <string name="latest_education">Pendidikan terakhir</string>
    <string name="page_3">3/5</string>
    <string name="first_sibling_data">Data anak ke-1</string>
    <string name="second_sibling_data">Data anak ke-2</string>
    <string name="third_sibling_data">Data anak ke-3</string>
    <string name="fourth_sibling_data">Data anak ke-4</string>
    <string name="fifth_sibling_data">Data anak ke-5</string>
    <string name="page_4">4/5</string>
    <string name="page_5">5/5</string>
    <string name="sibling_hint">Isi sesuai jumlah saudara termasuk klien sendiri dan lanjutkan ke bagian berikutnya :)</string>
    <string name="client_sibling">Data Saudara Sekandung</string>
    <string name="psychological_record">Riwayat Psikologis</string>
    <string name="current_problem">Masalah saat ini yang dihadapi</string>
    <string name="place_of_consultation">Tempat konsultasi</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="consultation_date">Bulan dan tahun konsultasi</string>
    <string name="complaint">Keluhan</string>
    <string name="solution">Upaya yang dilakukan</string>
    <string name="effort_done">Usaha yang pernah dilakukan untuk mengatasi</string>
    <string name="agreement_statement">Saya menyatakan bahwa data yang saya masukkan adalah benar dan saya bertanggungjawab mengenai kebenaran data tersebut</string>
    <string name="final_statement">Pernyataan ini saya buat secara sadar, sukarela, dan tanpa adanya paksaan dari pihak manapun</string>
    <string name="agree">Saya setuju</string>
    <string name="continu">Lanjutkan</string>
    <string name="str_photo">Foto dokumen STR</string>
    <string name="str_number">Nomor STR</string>
    <string name="sip_number">Nomor SIP</string>
    <string name="ssp_number">Nomor SSP</string>
    <string name="sip_photo">Foto dokumen SIP</string>
    <string name="ssp_photo">Foto dokumen SSP</string>
    <string name="client_request">Jadwal Pengajuan Konsultasi</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="save">Simpan</string>
    <string name="start_date">Tanggal Awal</string>
    <string name="end_date">Tanggal Akhir</string>
    <string name="saturday">Sabtu</string>
    <string name="friday">Jumat</string>
    <string name="thursday">Kamis</string>
    <string name="wednesday">Rabu</string>
    <string name="tuesday">Selasa</string>
    <string name="monday">Senin</string>
    <string name="sunday">Minggu</string>
    <string name="session_per_day">Jumlah Sesi Per Hari</string>
    <string name="first_practice_hour">Jam Awal Praktik</string>
    <string name="practice_day">Hari Praktik</string>
    <string name="interval_between_session">Jeda Antara Sesi (dalam menit)</string>
    <string name="nearest_schedule">Jadwal terdekat</string>
    <string name="ongoing_schedule">Konsultasi saat ini</string>
    <string name="no_upcoming_schedule">Kamu tidak memiliki jadwal konsultasi dalam waktu dekat</string>
    <string name="no_ongoing_schedule">Kamu tidak memiliki konsultasi yang sedang berlangsung</string>
    <string name="diagnosis_required">Diagnosis*</string>
    <string name="diagnosis_code_required">Kode Diagnosis*</string>
    <string name="physcal_health_history_required">Riwayat Kesehatan Fisik*</string>
    <string name="assessment_required">Asesmen*</string>
    <string name="suicide_risk_required">Risiko Bunuh Diri*</string>
    <string name="other_harm_risk_required">Risiko untuk Menyakiti atau Membunuh Orang Lain*</string>
    <string name="self_harm_risk_required">Risiko Menyakiti Diri*</string>
    <string name="consultation_purpose_required">Tujuan Konsultasi*</string>
    <string name="meetings">Pertemuan</string>
    <string name="notes">Catatan</string>
    <string name="treatment_plan_required">Rencana Penanganan*</string>
    <string name="end">Selesaikan</string>
    <string name="see_preconsultation_survey">Lihat Survei Prakonsultasi</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="medical_consumption_required">Konsumsi Obat*</string>
    <string name="panas_survey_result">Hasil Survei Panas</string>
    <string name="diagnosis_code">Kode diagnosis</string>
    <string name="physial_health_history">Riwayat kesehatan fisik</string>
    <string name="medical_consumption">Konsumsi obat</string>
    <string name="suicide_risk">Risiko bunuh diri</string>
    <string name="self_harm_risk">Risiko menyakiti diri sendiri</string>
    <string name="others_harm_risk">Risiko untuk menyakiti atau membunuh orang lain</string>
    <string name="assessment">Asesmen</string>
    <string name="consultation_purpose">Tujuan kedatangan</string>
    <string name="treatment_plan">Rencana penanganan</string>
    <string name="client_record">Record Klien</string>
    <string name="see_client_record">Lihat Record Klien</string>
    <string name="client_personal_data">Data Pribadi</string>
    <string name="birth_date_and_year">Tempat dan tanggal lahir</string>
    <string name="email">Email</string>
    <string name="has_consulted_before">Pernah melakukan konsultasi</string>
    <string name="month_consulted">Bulan konsultasi</string>
    <string name="year_consulted">Tahun konsultasi</string>
    <string name="family_data">Data Keluarga</string>
    <string name="kindergarten_data">Data TK</string>
    <string name="elementary_data">Data SD</string>
    <string name="junior_data">Data SMP</string>
    <string name="senior_data">Data SMA/SMK</string>
    <string name="college_data">Data PerguruanTinggi</string>
    <string name="education_data_description">Data Sekolah (Format: Nama sekolah / alamat / tahun masuk / tahun lulus)</string>
    <string name="school_name">Nama sekolah</string>
    <string name="address">Alamat</string>
    <string name="admission_year">Tahun masuk</string>
    <string name="graduation_year">Tahun lulus</string>
    <string name="ipip_caution">Menjawab \'Ya\' lebih dari 6</string>
    <string name="ipip">IPIP</string>
    <string name="srq">SRQ</string>
    <string name="extraversion">Extraversion</string>
    <string name="agreeableness">Agreeableness</string>
    <string name="conscientiousness">Conscientiousness</string>
    <string name="neuroticism">Neuroticism</string>
    <string name="opennessOrIntellectOrImagination">Openness/Intellect/Imagination</string>
    <string name="use_diagnosis">Gunakan diagnosis?</string>
    <string name="problem_description_required">Deskripsi masalah*</string>
    <string name="problem_description">Deskripsi masalah</string>


</resources>
