<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="id.ac.ui.cs.mobileprogramming.ilham_darmawan.konselink_counselor.viewmodel.ConsultationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_two"
            android:translationZ="5dp">

            <com.github.ybq.android.spinkit.SpinKitView
                style="@style/SpinKitView.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:SpinKit_Color="@color/bg_dark_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    style="@style/FormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/practice_day" />

                <CheckBox
                    android:id="@+id/checkbox_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{vm.workDays[0]}"
                    android:minHeight="0dp"
                    android:text="@string/sunday"
                    android:textColor="@color/bg_dark_blue" />

                <CheckBox
                    android:id="@+id/checkbox_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{vm.workDays[1]}"
                    android:minHeight="0dp"
                    android:text="@string/monday"
                    android:textColor="@color/bg_dark_blue" />

                <CheckBox
                    android:id="@+id/checkbox_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{vm.workDays[2]}"
                    android:minHeight="0dp"
                    android:text="@string/tuesday"
                    android:textColor="@color/bg_dark_blue" />

                <CheckBox
                    android:id="@+id/checkbox_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{vm.workDays[3]}"
                    android:minHeight="0dp"
                    android:text="@string/wednesday"
                    android:textColor="@color/bg_dark_blue" />

                <CheckBox
                    android:id="@+id/checkbox_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{vm.workDays[4]}"
                    android:minHeight="0dp"
                    android:text="@string/thursday"
                    android:textColor="@color/bg_dark_blue" />

                <CheckBox
                    android:id="@+id/checkbox_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{vm.workDays[5]}"
                    android:minHeight="0dp"
                    android:text="@string/friday"
                    android:textColor="@color/bg_dark_blue" />

                <CheckBox
                    android:id="@+id/checkbox_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{vm.workDays[6]}"
                    android:minHeight="0dp"
                    android:text="@string/saturday"
                    android:textColor="@color/bg_dark_blue" />


                <TextView
                    style="@style/FormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_practice_hour" />

                <TimePicker
                    android:id="@+id/consultation_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numbersSelectorColor="@color/bg_dark_blue"
                    android:timePickerMode="spinner" />

                <TextView
                    style="@style/FormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session_per_day" />

                <NumberPicker
                    android:id="@+id/session_num_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numbersSelectorColor="@color/bg_dark_blue"
                    app:startSessionTime="@{vm.startSessionTime}" />

                <TextView
                    style="@style/FormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interval_between_session" />


                <NumberPicker
                    android:id="@+id/interval_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numbersSelectorColor="@color/bg_dark_blue" />

                <Button
                    android:id="@+id/button_save_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="25dp"
                    android:background="@drawable/button_blue_gradient"
                    android:backgroundTint="@color/bg_dark_blue"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/save"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>